--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,14 @@
 name: data_structures_final_project
-description: A web server built using the shelf package.
+description: A web server built using pure dart.
 # version: 1.0.0
-# homepage: https://www.example.com
+# homepage: https://www.github.com/ali-alizadeh/data_structures_final_project
 # author: Ali Alizadeh <alizadeh.ali.e@gmail.com>
 
 environment:
-  sdk: '>=2.5.0 <3.0.0'
+  sdk: '>=2.7.0 <3.0.0'
 
 dependencies:
-  args: ^1.5.0
-  shelf: ^0.7.5
+  meta: ^1.1.8
 
 dev_dependencies:
-  pedantic: ^1.8.0
+  pedantic: ^1.9.0
